--- a/en/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html
+++ b/en/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html
@@ -161,10 +161,12 @@ permalink: /en/open-source-machine-learning-engineer-intern/index11/nexss-career
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Development innovative tools using AI/ML, 
+<li>development innovative tools using AI/ML, 
 <ul>
-<li>Learn, build <strong>new/innovative technologies</strong> or services based on business demands and industry trends.</li>
+<li>learn, build <strong>new/innovative technologies</strong> or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
