--- a/en/open-source-powershell-developer-intern/index19/nexss-career-job-details.html
+++ b/en/open-source-powershell-developer-intern/index19/nexss-career-job-details.html
@@ -160,10 +160,12 @@ permalink: /en/open-source-powershell-developer-intern/index19/nexss-career-job-
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
