--- a/open-source-backend-java-developer-intern/index18/nexss-career-job-details.html
+++ b/open-source-backend-java-developer-intern/index18/nexss-career-job-details.html
@@ -168,10 +168,12 @@ permalink: /open-source-backend-java-developer-intern/index18/nexss-career-job-d
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
