--- a/open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html
+++ b/open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Software Developer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-details.html
+title: "Open Source Backend - NodeJS Developer - Intern - JOB Openings - nexss.com"
+permalink: /open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
 </script>
 
   <title>
-    Open Source Software Developer - Intern - JOB Openings - nexss.com
+    Open Source Backend - NodeJS Developer - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Software Developer - Intern - remote - nexss.com">
+  <meta name="description" content="Open Source Backend - NodeJS Developer - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Software Developer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source Backend - NodeJS Developer - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -80,23 +80,23 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -106,18 +106,18 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="en/index.html#services">services</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="en/nexss-career.html">career</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="en/nexss-blog.html">blog</a>
+        <a href="nexss-blog.html">blog</a>
 
     </li>
     <li>
-        <a href="en/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -145,38 +145,29 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
     </div>
     <div>
             <div>
-        <h1>Open Source Software Developer - Intern</h1>
+        <h1>Open Source Backend - NodeJS Developer - Intern</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
-        <p>If you would like to:</p>
-<ul>
-<li>Learn new technologies or services based on business demands and industry trends,</li>
-<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em>,</li>
-<li>Create reusable code and components,</li>
-<li>Optimize applications for maximum speed and scalability.</li>
-</ul>
+        
                 <h4>Preferred Qualifications</h4>
         <ul>
-<li>Programming skills in <strong>ANY</strong> language,</li>
+<li>NodeJS experience</li>
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li><strong>NodeJS</strong> and/or <strong>TypeScript</strong> and/or <strong>PHP</strong></li>
-<li><em>AWS</em></li>
-<li><em>Git</em></li>
-<li><em>GraphQL</em></li>
-<li><em>Prisma</em></li>
-<li><em>Docker</em></li>
-<li><em>React</em> or <em>Angular</em></li>
-<li><em>MySQL</em>, <em>SQLite</em></li>
-<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
+<li>️<strong>Microservices️</strong>
+<ul>
+<li>️<strong>AWS️</strong></li>
+<li>️<strong>GraphQL️</strong></li>
+<li>️<strong>REST️</strong></li>
+</ul></li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
 <li>participation in training, internal workshops,</li>
 </ul></li>
 <li>flexible working hours.</li>
@@ -230,33 +221,33 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <!-- <li>
-          <a href="en/privacy-policy.html">Privacy Policy</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
-          <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+          <a href="terms-and-conditions.html">Terms and Conditions</a>
         </li> -->
         <li>
-          <a href="en/faq.html">FAQ</a>
+          <a href="faq.html">FAQ</a>
 
         </li>
         <li>
-          <a href="en/nexss-blog.html">Blog</a>
+          <a href="nexss-blog.html">Blog</a>
 
         </li>
         <li>
-          <a href="en/nexss-career.html">Career</a>
+          <a href="nexss-career.html">Career</a>
 
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 
         </li>
         <li>
-          <a href="en/nexss-programming-languages.html">Supported programming languages</a>
+          <a href="nexss-programming-languages.html">Supported programming languages</a>
 
         </li>
         <li>
-          <a href="en/index.html#contacts">Contact</a>
+          <a href="index.html#contacts">Contact</a>
         </li>
       </ul>
     </div>
@@ -280,7 +271,7 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
