--- a/open-source-business-intelligence-developer-intern/index13/nexss-career-job-details.html
+++ b/open-source-business-intelligence-developer-intern/index13/nexss-career-job-details.html
@@ -166,7 +166,11 @@ permalink: /open-source-business-intelligence-developer-intern/index13/nexss-car
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,
+<ul>
+<li>participation in training, internal workshops,</li>
+</ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
