--- a/open-source-frontend-vue.js-developer-intern/index15/nexss-career-job-details.html
+++ b/open-source-frontend-vue.js-developer-intern/index15/nexss-career-job-details.html
@@ -156,17 +156,25 @@ permalink: /open-source-frontend-vue.js-developer-intern/index15/nexss-career-jo
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li>nodeJS
+<li>JS (ES6+)
 <ul>
-<li>graphQL</li>
+<li>TypeScript</li>
+<li>Webpack</li>
+<li>Vuex</li>
+<li>GIT</li>
+<li>Node.js</li>
+<li>jQuery</li>
+<li>GraphQL</li>
 </ul></li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
