--- a/open-source-music-producer-bitwig-intern/index23/nexss-career-job-details.html
+++ b/open-source-music-producer-bitwig-intern/index23/nexss-career-job-details.html
@@ -161,10 +161,12 @@ permalink: /open-source-music-producer-bitwig-intern/index23/nexss-career-job-de
         <p>Cinematic music examples</p>
                         <h4>Benefits</h4>
         <ul>
-<li>Composing music for presentation of innovative tools and applications, 
+<li>composing music for presentation of innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
