--- a/open-source-php-programmer-intern/index8/nexss-career-job-details.html
+++ b/open-source-php-programmer-intern/index8/nexss-career-job-details.html
@@ -164,10 +164,12 @@ permalink: /open-source-php-programmer-intern/index8/nexss-career-job-details.ht
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Development innovative WEB and CLI solutions, 
+<li>development innovative WEB and CLI solutions, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
