--- a/open-source-research-engineer-intern/index14/nexss-career-job-details.html
+++ b/open-source-research-engineer-intern/index14/nexss-career-job-details.html
@@ -182,10 +182,12 @@ permalink: /open-source-research-engineer-intern/index14/nexss-career-job-detail
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Develop innovative tools and applications, 
+<li>develop innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
