--- a/open-source-ui-ux-designer-intern/index22/nexss-career-job-details.html
+++ b/open-source-ui-ux-designer-intern/index22/nexss-career-job-details.html
@@ -161,10 +161,12 @@ permalink: /open-source-ui-ux-designer-intern/index22/nexss-career-job-details.h
         <p>3D Experience - <strong>Blender prefered</strong></p><strong>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing ui/ux for innovative tools and applications, 
+<li>developing ui/ux for innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
