--- a/pl/nexss-career.html
+++ b/pl/nexss-career.html
@@ -291,6 +291,12 @@ permalink: /pl/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html">Open Source Backend - NodeJS Developer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
 
       <hr>
