--- a/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
+++ b/pl/open-source-art-designer-intern/index2/nexss-career-job-details.html
@@ -163,10 +163,12 @@ permalink: /pl/open-source-art-designer-intern/index2/nexss-career-job-details.h
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing <strong>art</strong> for innovative tools and applications, 
+<li>developing <strong>art</strong> for innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
