--- a/pl/open-source-python-programmer-intern/index7/nexss-career-job-details.html
+++ b/pl/open-source-python-programmer-intern/index7/nexss-career-job-details.html
@@ -160,10 +160,12 @@ permalink: /pl/open-source-python-programmer-intern/index7/nexss-career-job-deta
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Development innovative Blender 3D add-ons, 
+<li>development innovative Blender 3D add-ons, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
