--- a/pl/open-source-software-developer-intern/index1/nexss-career-job-details.html
+++ b/pl/open-source-software-developer-intern/index1/nexss-career-job-details.html
@@ -176,8 +176,10 @@ permalink: /pl/open-source-software-developer-intern/index1/nexss-career-job-det
         <ul>
 <li>Developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
