--- a/en/open-source-frontend-angular-developer-intern/index17/nexss-career-job-details.html
+++ b/en/open-source-frontend-angular-developer-intern/index17/nexss-career-job-details.html
@@ -159,15 +159,22 @@ permalink: /en/open-source-frontend-angular-developer-intern/index17/nexss-caree
 <li>nodeJS
 <ul>
 <li>graphQL</li>
-<li>MySQL or SQLite</li>
+<li>TypeScript</li>
+<li>RxJS</li>
+<li>CSS/Saas</li>
+<li>GIT</li>
+<li>NPM</li>
+<li>WebPack.</li>
 </ul></li>
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
