--- a/en/open-source-sound-designer-intern/index4/nexss-career-job-details.html
+++ b/en/open-source-sound-designer-intern/index4/nexss-career-job-details.html
@@ -164,10 +164,12 @@ permalink: /en/open-source-sound-designer-intern/index4/nexss-career-job-details
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Design <b>music and sound</b> for innovative tools and applications, 
+<li>design <b>music and sound</b> for innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
