--- a/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
+++ b/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
@@ -158,10 +158,12 @@ permalink: /open-source-content-and-seo-specialist-intern/index3/nexss-career-jo
         <p>SEO / Search Engine Optimization</p>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing <b>seo and content</b> for innovative tools and applications, 
+<li>developing <b>seo and content</b> for innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
