--- a/open-source-data-scientist-intern/index12/nexss-career-job-details.html
+++ b/open-source-data-scientist-intern/index12/nexss-career-job-details.html
@@ -174,10 +174,12 @@ permalink: /open-source-data-scientist-intern/index12/nexss-career-job-details.h
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Development innovative tools using <strong>AI</strong>/<strong>ML</strong> and <strong>BigData</strong>, 
+<li>development innovative tools using <strong>AI</strong>/<strong>ML</strong> and <strong>BigData</strong>, 
 <ul>
-<li>Learn, build <strong>new/innovative technologies</strong> or services based on business demands and industry trends.</li>
+<li>learn, build <strong>new/innovative technologies</strong> or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
