--- a/open-source-video-editor-intern/index5/nexss-career-job-details.html
+++ b/open-source-video-editor-intern/index5/nexss-career-job-details.html
@@ -160,10 +160,12 @@ permalink: /open-source-video-editor-intern/index5/nexss-career-job-details.html
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Develop <b>videos</b> for innovative tools and applications, 
+<li>develop <b>videos</b> for innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
