--- a/pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html
+++ b/pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html
@@ -164,10 +164,12 @@ permalink: /pl/open-source-devops-engineer-intern/index21/nexss-career-job-detai
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Developing innovative tools and applications, 
+<li>developing innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
