--- a/pl/open-source-software-tester-intern/index6/nexss-career-job-details.html
+++ b/pl/open-source-software-tester-intern/index6/nexss-career-job-details.html
@@ -165,10 +165,12 @@ permalink: /pl/open-source-software-tester-intern/index6/nexss-career-job-detail
 </ul>
                         <h4>Benefits</h4>
         <ul>
-<li>Test innovative tools and applications, 
+<li>test innovative tools and applications, 
 <ul>
-<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+<li>learn, build new/innovative technologies or services based on business demands and industry trends,</li>
+<li>participation in training, internal workshops,</li>
 </ul></li>
+<li>flexible working hours.</li>
 </ul>
         
         <hr>
