--- a/nexss-career.html
+++ b/nexss-career.html
@@ -313,11 +313,11 @@ permalink: /nexss-career.html
   </div>
 </div>
 <style>
-  h3 {
+  #nexssPage h3 {
     background-color: bisque;
   }
 
-  h4 {
+  #nexssPage h4 {
     background-color: #eee;
     color: #523211;
     font-size: 1em;
@@ -325,7 +325,7 @@ permalink: /nexss-career.html
     font-weight: bold;
   }
 
-  h5 {
+  #nexssPage h5 {
     background-color: darkseagreen;
     font-size: larger;
   }
