--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@ permalink: /
         <div class="center">
             <div class="welcome__wrap  wow slideInLeft">
                 <h1>
-                    <div class="text_1">
+                    <span class="text_1">
                         Open Source
-                    </div>
-                    <div class="text_2" style="margin:0;margin-top:30px;color:#fec518">
+                    </span>
+                    <span class="text_2" style="margin:0;margin-top:30px;color:#fec518;display:block;">
                         Nexss Programmer 2.5.43
-                    </div>
+                    </span>
                 </h1>
                 <div class="text_3">
                     <h2>The innovative and evolutionary tool. </h2>
@@ -362,7 +362,7 @@ permalink: /
         <div class="item__list">
                         <div class="item wow flipInY" data-wow-delay="0.1s">
                 <figure>
-                    <img src="assets/default/images/services_icon_5.png" alt="">
+                    <img alt="Open Source - NEXSS" src="assets/default/images/services_icon_5.png">
                 </figure>
                 <h2 class="title">
                     Open Source
@@ -373,7 +373,7 @@ permalink: /
             </div>
                         <div class="item wow flipInY" data-wow-delay="0.2s">
                 <figure>
-                    <img src="assets/default/images/services_icon_2.png" alt="">
+                    <img alt="New Software Development - NEXSS" src="assets/default/images/services_icon_2.png">
                 </figure>
                 <h2 class="title">
                     New Software Development
@@ -384,7 +384,7 @@ permalink: /
             </div>
                         <div class="item wow flipInY" data-wow-delay="0.3s">
                 <figure>
-                    <img src="assets/default/images/services_icon_3.png" alt="">
+                    <img alt="Innovations - NEXSS" src="assets/default/images/services_icon_3.png">
                 </figure>
                 <h2 class="title">
                     Innovations
@@ -395,7 +395,7 @@ permalink: /
             </div>
                         <div class="item wow flipInY" data-wow-delay="0.4s">
                 <figure>
-                    <img src="assets/default/images/services_icon_4.png" alt="">
+                    <img alt="Applications Modernization - NEXSS" src="assets/default/images/services_icon_4.png">
                 </figure>
                 <h2 class="title">
                     Applications Modernization
@@ -406,7 +406,7 @@ permalink: /
             </div>
                         <div class="item wow flipInY" data-wow-delay="0.5s">
                 <figure>
-                    <img src="assets/default/images/services_icon_1.png" alt="">
+                    <img alt="Latest technologies deployments and enhancements - NEXSS" src="assets/default/images/services_icon_1.png">
                 </figure>
                 <h2 class="title">
                     Latest technologies deployments and enhancements
@@ -417,7 +417,7 @@ permalink: /
             </div>
                         <div class="item wow flipInY" data-wow-delay="0.6s">
                 <figure>
-                    <img src="assets/default/images/services_icon_6.png" alt="">
+                    <img alt="Care of our applications - NEXSS" src="assets/default/images/services_icon_6.png">
                 </figure>
                 <h2 class="title">
                     Care of our applications
@@ -490,8 +490,8 @@ permalink: /
   <footer class="footer">
      <div class="footer__top">
   <div class="container">
-        <a href="#" class="logo">
-      <img src="assets/default/images/footer_logo.png" alt="">
+        <a href="/" class="logo">
+      <img src="assets/default/images/footer_logo.png" alt="Nexss logo - Innovations - Open Source Nexss Programmer and Software/Web Development.">
     </a>
     
     <section class="ft-main">
