--- a/pl/nexss-career.html
+++ b/pl/nexss-career.html
@@ -298,6 +298,30 @@ permalink: /pl/nexss-career.html
         </h3>
         <p>
         </p>
+                <hr>
+        <h3><a href="pl/open-source-3d-modeling-artist-intern/index25/nexss-career-job-details.html">Open Source 3D Modeling Artist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="pl/open-source-3d-animation-artist-intern/index26/nexss-career-job-details.html">Open Source 3D Animation Artist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="pl/open-source-3d-texture-artist-intern/index27/nexss-career-job-details.html">Open Source 3D Texture Artist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="pl/open-source-3d-visual-fx-artist-vfx-intern/index28/nexss-career-job-details.html">Open Source 3D Visual FX Artist/VFX - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
               </div>
 
       <hr>
