--- a/pl/nexss-career.html
+++ b/pl/nexss-career.html
@@ -150,7 +150,8 @@ permalink: /pl/nexss-career.html
           evolutionary</strong> products. We will give you more details at the later stage. Check our job openings and
         if
         you have
-        any questions don't hesitate to contact us at <a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
+        any questions don't hesitate to contact us at <a href="mailto:jobs@nexss.com">jobs@nexss.com</a>
+      </p>
     </div>
     <div>
       <div>
@@ -323,9 +324,9 @@ permalink: /pl/nexss-career.html
         <p>
         </p>
               </div>
-
       <hr>
-    </div>
+            Total <span style="font-weight:bold;">28</span> job oppenings.
+          </div>
     <div>
       <h2>Spontaneous application</h2>
 <p>We are always looking for great talents, so if you don't see any position which match with your qualifications please send us a CV and we will contact you. <a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
