--- a/en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
+++ b/en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
@@ -20,7 +20,7 @@ permalink: /en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
   <meta name="description" content="Nexss Programmer Nodes - Nexss Programmer Blog">
-  <link rel="canonical" href="http://nexss.local:8081/639_blog-natron/nexss-programmer-nodes/nexss-blog.html/">
+  <link rel="canonical" href="http://nexss.local:8081/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="BLOG Natron - Nexss Programmer Nodes">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
