--- a/en/faq.html
+++ b/en/faq.html
@@ -20,7 +20,7 @@ permalink: /en/faq.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="Checkout frequently asked questions about Nexss Programmer">
-  <link rel="canonical" href="http://nexss.local:8081/faq.html/">
+  <link rel="canonical" href="http://nexss.local:8081/faq.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="FAQ - Frequently Asked Questions">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
