--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -20,7 +20,7 @@ permalink: /en/nexss-career.html
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
   <meta name="description" content="Check our job Openings at Nexss.com">
-  <link rel="canonical" href="http://nexss.local:8081/nexss-career.html/">
+  <link rel="canonical" href="http://nexss.local:8081/nexss-career.html">
   <meta property="og:title" content="Nexss.com">
   <meta property="og:description" content="Career / Job Openings - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
