--- a/nexss-career.html
+++ b/nexss-career.html
@@ -58,11 +58,11 @@ permalink: /nexss-career.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-kariera.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-career.html">PL</a>
+                <a class="selected" href="/pl/nexss-kariera.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
