--- a/faq.html
+++ b/faq.html
@@ -58,11 +58,11 @@ permalink: /faq.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/faq.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/faq-najczesciej-zadawane-pytania.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/faq.html">PL</a>
+                <a class="selected" href="/pl/faq-najczesciej-zadawane-pytania.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
