--- a/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -84,7 +84,7 @@ permalink: /pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -110,7 +110,7 @@ permalink: /pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -245,7 +245,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
         <h4 class="ft-title">O nas</h4>
         <ul>
           <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Career</a>
+          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
 </li>
           <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
