--- a/pl/faq.html
+++ b/pl/faq.html
@@ -84,7 +84,7 @@ permalink: /pl/faq.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -110,7 +110,7 @@ permalink: /pl/faq.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -338,7 +338,7 @@ permalink: /pl/faq.html
         <h4 class="ft-title">O nas</h4>
         <ul>
           <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Career</a>
+          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
 </li>
           <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
