--- a/pl/index.html
+++ b/pl/index.html
@@ -86,7 +86,7 @@ permalink: /pl/index.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -112,7 +112,7 @@ permalink: /pl/index.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -499,7 +499,7 @@ permalink: /pl/index.html
         <h4 class="ft-title">O nas</h4>
         <ul>
           <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Career</a>
+          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
 </li>
           <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
