--- a/pl/latwa-instalacja-nexss-programmer.html
+++ b/pl/latwa-instalacja-nexss-programmer.html
@@ -58,11 +58,11 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/latwa-instalacja-nexss-programmer.html">EN</a>
+                <a href="/en/easy-install-nexss-programmer.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/latwa-instalacja-nexss-programmer.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/easy-install-nexss-programmer.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -84,7 +84,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -110,7 +110,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -422,7 +422,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
         <h4 class="ft-title">O nas</h4>
         <ul>
           <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Career</a>
+          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
 </li>
           <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
