--- a/pl/nexss-kariera.html
+++ b/pl/nexss-kariera.html
@@ -1,6 +1,6 @@
 ---
 title: "Career / Job Openings - Nexss.com"
-permalink: /pl/nexss-career.html
+permalink: /pl/nexss-kariera.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
