--- a/pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html
+++ b/pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-job-details.html
@@ -84,7 +84,7 @@ permalink: /pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -110,7 +110,7 @@ permalink: /pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html">Kariera</a>
+        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
 
     </li>
     <li>
@@ -225,7 +225,7 @@ permalink: /pl/open-source-backend-nodejs-developer-intern/index24/nexss-career-
         <h4 class="ft-title">O nas</h4>
         <ul>
           <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-career.html">Kariera</a>
+          <li><a class="career" href="pl/nexss-kariera.html">Kariera</a>
 </li>
           <li><a href="pl/nexss-portfolio.html">Portfolio</a>
 </li>
